<resources>
    <string name="history_activity">History</string>
    <string name="activity_option_launch_params">Launch activity with parameters</string>
    <string name="activity_option_launch_root">Launch with root or Shizuku</string>
    <string name="activity_option_create_shortcut">Create shortcut</string>
    <string name="application_option_open">Launch the application</string>
    <string name="application_option_pin">Pin to top</string>
    <string name="application_option_unpin">Unpin from top</string>
    <string name="application_pinned">Pinned</string>
    <string name="application_option_open_manifest">Open manifest viewer</string>
    <string name="application_option_open_info">Open application info</string>
    <string name="application_option_open_market">Open in app market</string>
    <string name="application_disabled">Disabled</string>
    <string name="application_system">System</string>
    <string name="shortcut_name">Label</string>
    <string name="shortcut_name_empty">Label cannot be empty</string>
    <string name="shortcut_create">Create</string>
    <string name="shortcut_change_icon">Change icon</string>
    <string name="shortcut_set_icon_tooltip">Tap to change the icon</string>
    <string name="icons_loading_error">Failed to load the icons</string>
    <string name="shortcut_icon_gallery">Pick from gallery</string>
    <string name="shortcut_icon_preset">Select from icons</string>
    <string name="shortcut_invert_icon_colors">Invert icon colors</string>
    <string name="shortcut_options">Options</string>
    <string name="create_shortcut_non_exported_warning">Launching this activity requires root permission</string>
    <string name="starting_activity">Starting activity: %s</string>
    <string name="starting_activity_failed">Failed to start activity: %s</string>
    <string name="starting_activity_launch_intent_failed">Cannot find launcher activity</string>
    <string name="starting_activity_failed_security">You don\'t have permission to run this activity: %s</string>
    <string name="starting_activity_intent">Starting activity</string>
    <string name="starting_activity_intent_failed">Failed to start activity</string>
    <string name="starting_activity_root_error">Failed to launch the activity using root</string>
    <string name="starting_activity_root_not_available">Root is not available or the permission is not granted</string>
    <string name="onboarding_title">Set up Shizuku</string>
    <string name="onboarding_intro"><![CDATA[<a href="%1$s">Shizuku</a> is used to launch non-exported activities without root. Complete setup once.]]></string>
    <string name="onboarding_step_done" translatable="false">✓</string>
    <string name="onboarding_step_install_title">Install Shizuku</string>
    <string name="onboarding_step_install_desc">Use Shizuku to run system commands. Install it and start the service.</string>
    <string name="onboarding_action_install_shizuku">Install</string>
    <string name="onboarding_action_open_shizuku">Open</string>
    <string name="onboarding_step_permission_title">Grant Shizuku access</string>
    <string name="onboarding_step_permission_desc">Allow Activity Manager to use Shizuku.</string>
    <string name="onboarding_action_grant_shizuku">Grant access</string>
    <string name="onboarding_action_done">Done</string>
    <string name="activities_list_empty_text">There are no exported activities</string>
    <string name="activities_list_empty_action">Show non-exported</string>
    <string name="activities_list_non_exported_show_once">Just once</string>
    <string name="activities_list_non_exported_show_always">Always show</string>
    <string name="activities_list_failed_loading">Failed to open \"%1$s\"</string>
    <string name="action_about">About</string>
    <string name="action_launch_intent">Intent launcher</string>
    <string name="action_history">History</string>
    <string name="action_clear_history">Clear history</string>
    <string name="action_search">Search</string>
    <string name="action_search_hint">Application name or package</string>
    <string name="action_search_activity_hint">Activity name or package</string>
    <string name="action_settings">Settings</string>
    <string name="launch_param_package_name">Package name</string>
    <string name="launch_param_class_name">Class name</string>
    <string name="launch_param_action">Action</string>
    <string name="launch_param_data">Data</string>
    <string name="launch_param_mime_type">Mime type</string>
    <string name="launch_param_extras">Extras</string>
    <string name="launch_param_extras_add">+ Add extra</string>
    <string name="launch_param_categories">Categories</string>
    <string name="launch_param_flags">Flags</string>
    <string name="save_to_history">Save to history</string>
    <string name="launch_with_root">Launch with root</string>
    <string name="item_history_has_extras">Extras</string>
    <string name="item_history_has_categories">Categories</string>
    <string name="item_history_has_flags">Flags</string>
    <string name="about_donation">Support development</string>
    <string name="about_source_code">Source code</string>
    <string name="about_version">Version</string>
    <string name="about_bug_tracker">Report a problem</string>
    <string name="about_suggest_idea">Suggest an idea</string>
    <string name="about_translation">Help with translation</string>
    <string name="about_open_source">Open source libraries</string>
    <string name="donate_snackbar_text">@string/about_donation</string>
    <string name="donate_snackbar_action_text">@string/donate_action_text</string>
    <string name="donate_message">If you are using Activity Manager and have enjoyed it, then this is a very powerful way to say thank you! By donating, you are helping make this tool, that already helps you, sustainable and healthy.</string>
    <string name="donate_action_text">Donate</string>
    <string name="donate_negative_action_text">Never ask</string>
    <string name="input_key">Input key</string>
    <string name="input_value">Input value</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="type_array">Array</string>
    <string name="history_empty_text">Nothing to show</string>
    <string name="history_empty_action">Run some intents</string>
    <string name="history_dialog_clear_title">Clear history</string>
    <string name="history_dialog_clear_message">Are you sure?</string>
    <string name="history_item_dialog_title">Intent</string>
    <string name="history_item_dialog_remove">Remove</string>
    <string name="history_item_dialog_add_shortcut">Create shortcut</string>
    <string name="history_item_dialog_export_uri">Export as URI</string>
    <string name="history_item_dialog_export_shell">Export as shell command</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dialog_add_extra_title">Add extra</string>
    <string name="dialog_add_extra_key_empty">Key cannot be empty</string>
    <string name="dialog_add_extra_value_empty">Value cannot be empty</string>
    <string name="dialog_add_extra_type_incorrect">Incorrect value type</string>
    <string name="dialog_export_intent_copy">Copy</string>
    <string name="dialog_export_intent_warning_array_extras">This intent contains array extras that cannot be represented as a URI. They are not included.</string>
    <string name="dialog_export_intent_warning_boolean_array_extras">Boolean array extras are not supported by the \'am\' command and are not included.</string>
    <string name="dialog_enable_non_exported_title">Non-exported activities</string>
    <string name="dialog_enable_non_exported_message">You can enable displaying non-exported activities, they will be highlighted with red color. Such activities can be run only with root permission</string>
    <string name="dialog_root_config_title">Set custom \'su\' executable</string>
    <string name="error_failed_to_instantiate_web_view">Failed to instantiate WebView, try again later</string>
    <string name="error_failed_to_open_manifest">Failed to open AndroidManifest.xml</string>
    <string name="dialog_share_title">Share AndroidManifest.xml file</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_appearance_theme_title">Theme</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_advanced_not_exported_title">Show not exported activities</string>
    <string name="pref_advanced_not_exported_summary">Can be run only using root permission</string>
    <string name="pref_header_launch">Launch</string>
    <string name="pref_launch_toast_title">Show launch message</string>
    <string name="pref_launch_toast_summary">Display a toast message when starting an activity</string>
    <string name="pref_header_root">Root</string>
    <string name="pref_root_config_summary">Customize the \'su\' executable used to launch activities with root</string>
    <string name="pref_header_intent">Intents</string>
    <string name="pref_intercept_intents_title">Intercept intents</string>
    <string name="pref_intercept_intents_summary">Show Activity Manager in the system share and open dialogs to inspect incoming intents</string>
    <string name="pref_header_experimental">Experimental</string>
    <string name="pref_card_layout_title">Card layout</string>
    <string name="pref_card_layout_summary">Show apps and activities as cards</string>
    <string name="pref_advanced_clear_cache_title">Clear app cache</string>
    <string name="pref_advanced_clear_cache_summary">Rebuild the list of installed apps from scratch</string>
    <string name="pref_advanced_clear_cache_done">App cache cleared</string>
    <string name="dialog_clear_cache_title">Clear app cache?</string>
    <string name="dialog_clear_cache_message">Clear the cache when the list looks wrong: apps are missing, the list is empty, or it still shows apps that were uninstalled. \n\nThe cache is rebuilt immediately, which can take a while if many apps are installed. Pinned apps are kept.</string>
    <string name="dialog_clear_cache_action">Clear</string>
    <string name="analyzer_section_general">General</string>
    <string name="analyzer_section_clip_data">Clip data</string>
    <string name="analyzer_section_handlers">Handlers</string>
    <string name="analyzer_section_export">Export</string>
    <string name="analyzer_label_resolved_mime_type">Resolved mime type</string>
    <string name="analyzer_label_calling_package">Calling package</string>
    <string name="analyzer_label_calling_activity">Calling activity</string>
    <string name="analyzer_label_flags_raw">Raw value</string>
    <string name="analyzer_label_clip_label">Label</string>
    <string name="analyzer_label_clip_mime_types">Mime types</string>
    <string name="analyzer_clip_text">Text</string>
    <string name="analyzer_type_query_parameter">query parameter</string>
    <string name="analyzer_extras_error">Failed to read the extras</string>
    <string name="analyzer_action_open_in_launcher">Open in Intent launcher</string>
    <string name="analyzer_dialog_unsupported_uris_title">Attached files will be lost</string>
    <string name="filter_header_sort_by">Sort by</string>
    <string name="filter_sort_by_name">Name</string>
    <string name="filter_sort_by_update_time">Update time</string>
    <string name="filter_sort_by_install_time">Install time</string>
    <string name="filter_sort_order_asc">Ascending</string>
    <string name="filter_sort_order_desc">Descending</string>
    <string name="filter_system_apps_title">System applications</string>
    <string name="filter_disabled_apps_title">Disabled applications</string>
    <string name="filter_toggle_show">Show</string>
    <string name="filter_toggle_label">Label</string>
</resources>