<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory android:title="@string/pref_header_advanced">

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="advanced_not_exported"
            android:summary="@string/pref_advanced_not_exported_summary"
            android:title="@string/pref_advanced_not_exported_title" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_header_appearance">

        <androidx.preference.ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_appearance_theme_list_titles"
            android:entryValues="@array/pref_appearance_theme_list_values"
            android:key="appearance_theme"
            android:title="@string/pref_appearance_theme_title" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
