<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp"
        android:paddingVertical="32dp">

        <TextView
            android:id="@+id/sortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_header_sort_by"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/sortByGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortBy"
            app:selectionRequired="true"
            app:singleLine="false"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/sortByName"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_sort_by_name"
                app:checkedIconEnabled="true"
                tools:checked="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sortByUpdateTime"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_sort_by_update_time"
                app:checkedIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sortByInstallTime"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_sort_by_install_time"
                app:checkedIconEnabled="true" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/orderByGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortByGroup"
            app:selectionRequired="true"
            app:singleLine="false"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/orderByAsc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_sort_order_asc"
                app:checkedIconEnabled="true"
                tools:checked="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/orderByDesc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_sort_order_desc"
                app:checkedIconEnabled="true" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/systemApps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/filter_system_apps_title"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderByGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/systemAppsGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/systemApps"
            app:selectionRequired="false"
            app:singleLine="false"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/showSystemApps"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_toggle_show"
                app:checkedIconEnabled="true"
                tools:checked="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/showSystemAppIndicator"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_toggle_label"
                app:checkedIconEnabled="true"
                tools:checked="true" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/disabledApps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/filter_disabled_apps_title"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/systemAppsGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/disabledAppsGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disabledApps"
            app:selectionRequired="false"
            app:singleLine="false"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/showDisabledApps"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_toggle_show"
                app:checkedIconEnabled="true"
                tools:checked="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/showDisabledAppIndicator"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_toggle_label"
                app:checkedIconEnabled="true"
                tools:checked="true" />

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
