<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:id="@+id/activity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingHorizontal="50dp"
        android:paddingVertical="16dp"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        tools:text="Activity name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activityInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/permission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="com.android.application.long.package.name.PERMISSION" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/list_divider" />

    <LinearLayout
        android:id="@+id/action_activity_add_shortcut"
        style="@style/BottomDialogItemStyle">

        <ImageView
            style="@style/BottomDialogItemIconStyle"
            app:srcCompat="@drawable/bookmark_add_24px" />

        <TextView
            style="@style/BottomDialogTextStyle"
            android:text="@string/activity_option_create_shortcut" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_activity_launch_with_params"
        style="@style/BottomDialogItemStyle">

        <ImageView
            style="@style/BottomDialogItemIconStyle"
            app:srcCompat="@drawable/ic_exit_to_app" />

        <TextView
            style="@style/BottomDialogTextStyle"
            android:text="@string/activity_option_launch_params" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_activity_launch_with_root"
        style="@style/BottomDialogItemStyle">

        <ImageView
            style="@style/BottomDialogItemIconStyle"
            app:srcCompat="@drawable/ic_activity_launch_root" />

        <TextView
            style="@style/BottomDialogTextStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/activity_option_launch_root" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="4dp"
            android:background="@color/list_divider" />

        <ImageButton
            android:id="@+id/rootSettings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?actionBarItemBackground"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_settings"
            app:tint="@color/icon_tint" />

    </LinearLayout>

</LinearLayout>
